# driver-insurance-claim-risk-model

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .tool-versions  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/: dataset.py
src/data_understanding/: data_collection.py
src/utils/: log_config.py
tests/unit/: test_data_collection.py  test_log_config.py
