[project]
name = "driver-insurance-claim-risk-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "pyright>=1.1.403",
    "pytest-cov>=6.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
